[change] Button story에 적용

--- a/stories/Button/Button.stories.mdx
+++ b/stories/Button/Button.stories.mdx
@@ -93,19 +93,19 @@ export const Default = (args, { argTypes }) => ({
                     <Button color="primary">Fill Primary</Button>
                     <Button color="success">Fill Success</Button>
                     <Button color="error">Fill Error</Button>
-                    <Button color="gray">Fill Gray</Button>
+                    <Button color="secondary">Fill Gray</Button>
                   </div>
                   <div style="display: flex">
                     <Button color="primary" type="outlined">Outlined Primary</Button>
                     <Button color="success" type="outlined">Outlined Success</Button>
                     <Button color="error" type="outlined">Outlined Error</Button>
-                    <Button color="gray" type="outlined">Outlined Gray</Button>
+                    <Button color="secondary" type="outlined">Outlined Gray</Button>
                   </div>
                   <div style="display: flex">
                     <Button color="primary" type="text">Text Primary</Button>
                     <Button color="success" type="text">Text Success</Button>
                     <Button color="error" type="text">Text Error</Button>
-                    <Button color="gray" type="text">Text Gray</Button>
+                    <Button color="secondary" type="text">Text Gray</Button>
                   </div>
                 </div>
         `,
@@ -144,13 +144,13 @@ export const Default = (args, { argTypes }) => ({
                     <Button color="primary" type="fill" size="medium" loading>Fill Primary</Button>
                     <Button color="success" type="fill" size="medium" loading>Fill Success</Button>
                     <Button color="error" type="fill" size="medium" loading>Fill Gray</Button>
-                    <Button color="gray" type="fill" size="medium" loading>Fill Gray</Button>
+                    <Button color="secondary" type="fill" size="medium" loading>Fill Gray</Button>
                   </div>
                   <div style="display: flex">
                     <Button color="primary" type="outlined" size="medium" loading>Fill Primary</Button>
                     <Button color="success" type="outlined" size="medium" loading>Fill Success</Button>
                     <Button color="error" type="outlined" size="medium" loading>Fill Gray</Button>
-                    <Button color="gray" type="outlined" size="medium" loading>Fill Gray</Button>
+                    <Button color="secondary" type="outlined" size="medium" loading>Fill Gray</Button>
                   </div>
                 </div>
         `,
@@ -169,19 +169,19 @@ export const Default = (args, { argTypes }) => ({
                     <Button color="primary" type="fill" size="medium" disabled>Fill Primary</Button>
                     <Button color="success" type="fill" size="medium" disabled>Fill Success</Button>
                     <Button color="error" type="fill" size="medium" disabled>Fill Gray</Button>
-                    <Button color="gray" type="fill" size="medium" disabled>Fill Gray</Button>
+                    <Button color="secondary" type="fill" size="medium" disabled>Fill Gray</Button>
                   </div>
                   <div style="display: flex">
                     <Button color="primary" type="outlined" size="medium" disabled>Fill Primary</Button>
                     <Button color="success" type="outlined" size="medium" disabled>Fill Success</Button>
                     <Button color="error" type="outlined" size="medium" disabled>Fill Gray</Button>
-                    <Button color="gray" type="outlined" size="medium" disabled>Fill Gray</Button>
+                    <Button color="secondary" type="outlined" size="medium" disabled>Fill Gray</Button>
                   </div>
                   <div style="display: flex">
                     <Button color="primary" type="text" size="medium" disabled>Fill Primary</Button>
                     <Button color="success" type="text" size="medium" disabled>Fill Success</Button>
                     <Button color="error" type="text" size="medium" disabled>Fill Gray</Button>
-                    <Button color="gray" type="text" size="medium" disabled>Fill Gray</Button>
+                    <Button color="secondary" type="text" size="medium" disabled>Fill Gray</Button>
                   </div>
                 </div>
         `,
