--- a/stories/Button/ButtonGroup.stories.mdx
+++ b/stories/Button/ButtonGroup.stories.mdx
@@ -79,20 +79,20 @@ export const Default = (args, { argTypes }) => ({
                 <div>
                     <Typography color="gray800">Horizontal ButtonGroup</Typography>
                     <ButtonGroup size="small" style="margin-bottom: 10px">
-                        <Button size="small" type="text" color="gray">
+                        <Button size="small" type="text" color="secondary">
                             <template v-slot:left-icon>
                                 <Icon name="IconPlusSmallLine" color="gray500" />
                             </template>
                             Button
                         </Button>
-                        <Button size="small" type="text" color="gray">
+                        <Button size="small" type="text" color="secondary">
                             <template v-slot:left-icon>
                                 <Icon name="IconPlusSmallLine" color="gray500" />
                             </template>
                             Button
                         </Button>
                     </ButtonGroup>
-                    <Typography color="gray800">Vertical ButtonGroup<Typography>
+                    <Typography color="gray800">Vertical ButtonGroup</Typography>
                     <ButtonGroup size="small" vertical>
                         <Button type="outlined" size="small">Button</Button>
                         <Button type="outlined" size="small">Button</Button>
