--- a/stories/Overlay.stories.mdx
+++ b/stories/Overlay.stories.mdx
@@ -8,44 +8,44 @@ import Button from "@/src/Components/Button/Button";
     argTypes={{
         show: {
             description: "Overlay 활성화",
-            defaultValue: false,
             control: {
                 type: "boolean",
             },
         },
         type: {
-          description: "Overlay 타입 ",
+          description: "Overlay 타입",
           control: {
             type: "select",
             options: ["dimmer"],
           },
         },
         persistent: {
-            description: "overlay 클릭해도 모달 닫지 않기",
-            defaultValue: false,
+            description: "overlay 클릭해도 닫지 않기",
             control: {
                 type: "boolean",
             },
         },
         zIndex: {
-          description: "zIndex",
-          defaultValue: 9999,
-          control: {
-           type: "text"
+            description: "zIndex",
+            control: {
+                type: "number",
             },
         },
     }}
 />
 
-export const Basic = (args, { argTypes }) => ({
+export const Default = (args, { argTypes }) => ({
   props: Object.keys(argTypes),
   components: { Overlay, Button },
   template: `
   <div>
         <Button @click="show = true">Open</Button>
-        <Overlay :show.sync="show"
-                 :type="type"
-                 :persistent="persistent"/>
+        <Overlay
+            :show.sync="show"
+            :type="type"
+            :persistent="persistent"
+            :z-index="zIndex"
+        />
     </div>`,
 });
 
@@ -53,9 +53,9 @@ export const Basic = (args, { argTypes }) => ({
 
 **Overlay** 컴포넌트의 문서입니다.
 
-<Story name="Basic" height="100px">
-    {Basic.bind({})}
+<Story name="Default" height="100px">
+    {Default.bind({})}
 </Story>
 
-<ArgsTable story="Basic" />
+<ArgsTable story="Default" />
 
