--- a/stories/Message/Modal/BasicModal.stories.mdx
+++ b/stories/Message/Modal/BasicModal.stories.mdx
@@ -1,5 +1,5 @@
 import { ArgsTable, Meta, Story, Canvas } from "@storybook/addon-docs/blocks";
-import BasicModal from "@/src/Components/Message/Modal/BasicModal";
+import BasicModal, { aligns } from "@/src/Components/Message/Modal/BasicModal";
 import Button from "@/src/Components/Button/Button";
 
 <Meta
@@ -8,63 +8,49 @@ import Button from "@/src/Components/Button/Button";
     argTypes={{
         show: {
             description: "모달 활성화",
-            defaultValue: false,
             control: {
                 type: "boolean",
             },
         },
         align: {
             description: "정렬",
-            defaultValue: "center",
             control: {
                 type: "select",
-                options: ["center", "left", "right"]
-            },
-            table: {
-                type: {
-                    summary: "string",
-                    detail: '"center" "left" "right"',
-                },
+                options: aligns,
             },
         },
         loading: {
             description: "버튼 로딩",
-            defaultValue: false,
             control: {
                 type: "boolean",
             },
         },
         successMessage: {
             description: "버튼명",
-            defaultValue: "확인",
             control: {
                 type: "text",
             },
         },
         showActionButton: {
             description: "버튼 보이기",
-            defaultValue: true,
             control: {
                 type: "boolean",
             },
         },
         showCloseButton: {
             description: "닫기 버튼 보이기",
-            defaultValue: false,
             control: {
                 type: "boolean",
             },
         },
         persistent: {
             description: "overlay 클릭해도 모달 닫지 않기",
-            defaultValue: false,
             control: {
                 type: "boolean",
             },
         },
         maxWidth: {
             description: "모달 최대 width",
-            defaultValue: "420px",
             control: {
                 type: "text",
             },
@@ -81,7 +67,6 @@ import Button from "@/src/Components/Button/Button";
         },
         scroll: {
             description: "스크롤 여부",
-            defaultValue: false,
             control: {
                 type: "boolean",
             },
@@ -89,7 +74,7 @@ import Button from "@/src/Components/Button/Button";
     }}
 />
 
-export const Basic = (args, { argTypes }) => ({
+export const Default = (args, { argTypes }) => ({
     props: Object.keys(argTypes),
     components: { BasicModal, Button },
     template: `
@@ -105,6 +90,7 @@ export const Basic = (args, { argTypes }) => ({
                 :show-action-button="showActionButton"
                 :max-width="maxWidth"
                 :scroll="scroll"
+                :success-callback="closeModal"
             >
                 <template v-slot:title>
                     {{ title }}
@@ -113,18 +99,24 @@ export const Basic = (args, { argTypes }) => ({
                     <div v-for="content in content" v-html="content" />
                 </template>
             </BasicModal>
-        </div>`
+        </div>
+    `,
+    methods: {
+        closeModal() {
+            this.show = false;
+        }
+    }
 });
 
 # BasicModal
 
 **BasicModal** 컴포넌트의 문서입니다.
 
-<Story name="Basic" height="100px">
-    {Basic.bind({})}
+<Story name="Default" height="100px">
+    {Default.bind({})}
 </Story>
 
-<ArgsTable story="Basic" />
+<ArgsTable story="Default" />
 
 ## Stories
 ### FullText
@@ -160,90 +152,133 @@ export const Basic = (args, { argTypes }) => ({
     </Story>
 </Canvas>
 
+### With ActionButton
+<Canvas>
+    <Story name="WithActionButton" height="100px">
+        {{
+            data: () => ({
+                show: false,
+            }),
+            template: `
+                <div>
+                    <Button @click="show = true">Open</Button>
+                    <BasicModal
+                        :show.sync="show"
+                        align="left"
+                        show-action-button
+                    >
+                        <template v-slot:title>
+                          이용약관 및 유의사항
+                        </template>
+                        <template v-slot:content>
+                            - 이용권 특성상 구매 후 중도 해지 및 이에 따른 환불이 불가능합니다.<br />
+                            - 일부 콘텐츠는 작성자 또는 답변자 요청으로 열람이 제한될 수 있습니다.<br />
+                            - 취소하면 결제에 사용된 할인 쿠폰은 소멸되며 재사용할 수 없습니다.<br />
+                            - 결제에 따른 개인정보는 '개인정보 처리방침'에 근거하여 관리됩니다.
+                        </template>
+                    </BasicModal>
+                </div>
+            `,
+            components: {
+                BasicModal, Button
+            }
+        }}
+    </Story>
+</Canvas>
+
 ### Scroll
 <Canvas>
     <Story name="Scroll" height="100px">
         {{
             data: () => ({
-                show1: false,
-                show2: false,
+                showModal1: false,
+                showModal2: false,
             }),
             template: `
                 <div>
-                    <Button @click="show1 = true">Open</Button>
-                    <BasicModal :show.sync="show1" align="left" scroll>
-                        <template v-slot:title>
-                            모달 제목
-                        </template>
-                        <template v-slot:content>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent non sollicitudin lacus. Morbi lacinia
-                            tortor id purus varius, sit amet sodales erat consequat. Integer ultrices mauris vehicula eros lacinia,
-                            at vulputate nibh euismod. Fusce at convallis nisl. Curabitur dui quam, rutrum quis semper vitae,
-                            dapibus nec lorem. Sed maximus imperdiet urna. Suspendisse porta commodo nisl, at viverra sapien.
-                            Praesent in felis enim. Sed mollis enim vel velit dapibus, eget consequat dolor convallis. Vivamus sit
-                            amet ornare ex. Morbi porttitor blandit eros sit amet tincidunt. Vivamus imperdiet molestie lectus ac
-                            tristique. Phasellus commodo commodo ligula, sollicitudin auctor erat rhoncus ac. Quisque lectus neque,
-                            iaculis nec mauris sed, congue rutrum sem. Fusce cursus, tortor ut placerat auctor, risus arcu porttitor
-                            tellus, ac pharetra lacus lectus eu dolor. Sed metus nibh, tincidunt pharetra pulvinar a, venenatis et
-                            eros. Cras et libero mauris. Quisque bibendum odio ut ornare interdum. Nunc eu nulla sollicitudin,
-                            facilisis dolor vel, placerat nibh. Donec eu ex iaculis, tincidunt turpis et, rhoncus neque. Mauris
-                            feugiat urna urna. Donec ac dapibus leo, sit amet porttitor nisi. Mauris felis leo, scelerisque
-                            scelerisque lobortis id, egestas tincidunt dui. Vivamus facilisis felis lectus, id tincidunt nisl
-                            interdum et. Praesent accumsan congue mauris, non pellentesque enim feugiat vel. Praesent in ullamcorper
-                            erat. Etiam mollis sed tellus a mattis. Ut placerat euismod egestas. Mauris blandit nunc eu justo
-                            semper, sit amet interdum eros mollis. Quisque vitae massa purus. Phasellus at orci arcu. Aliquam erat
-                            volutpat. Mauris bibendum orci nec ex semper, ac aliquam sapien placerat. Mauris cursus egestas justo id
-                            elementum. Suspendisse quis cursus massa. Cras fermentum, risus non efficitur condimentum, orci arcu
-                            sollicitudin diam, pharetra malesuada libero odio quis risus. Pellentesque in dui sodales, dapibus risus
-                            ullamcorper, bibendum diam. Praesent sagittis nibh velit, quis tincidunt lorem viverra nec. Phasellus
-                            eget placerat ante. Nulla ac nulla sed erat venenatis commodo. Aliquam id iaculis odio. Maecenas a
-                            maximus orci. In hac habitasse platea dictumst. Quisque quis diam tellus. In ac euismod libero. Aliquam
-                            semper, massa non dictum porttitor, nisi nulla aliquam risus, ornare iaculis tellus ligula sed nulla. Ut
-                            aliquet ligula ac finibus fringilla. Pellentesque pulvinar eros vulputate, bibendum tortor a, imperdiet
-                            metus. Ut rhoncus arcu est, nec elementum neque ultrices sit amet. Pellentesque dignissim ligula felis,
-                            nec scelerisque elit condimentum vitae. In porta magna eget augue egestas pulvinar. Suspendisse
-                            malesuada tellus sed massa pulvinar, sed maximus lorem elementum. Vivamus facilisis libero sit amet
-                            lacinia malesuada. Nam varius tortor quis lacus ultrices fermentum.
-                        </template>
-                    </BasicModal>
-                    <Button @click="show2 = true">Open</Button>
-                    <BasicModal :show.sync="show2" align="left" show-action-button scroll>
-                        <template v-slot:title>
-                            모달 제목
-                        </template>
-                        <template v-slot:content>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent non sollicitudin lacus. Morbi lacinia
-                            tortor id purus varius, sit amet sodales erat consequat. Integer ultrices mauris vehicula eros lacinia,
-                            at vulputate nibh euismod. Fusce at convallis nisl. Curabitur dui quam, rutrum quis semper vitae,
-                            dapibus nec lorem. Sed maximus imperdiet urna. Suspendisse porta commodo nisl, at viverra sapien.
-                            Praesent in felis enim. Sed mollis enim vel velit dapibus, eget consequat dolor convallis. Vivamus sit
-                            amet ornare ex. Morbi porttitor blandit eros sit amet tincidunt. Vivamus imperdiet molestie lectus ac
-                            tristique. Phasellus commodo commodo ligula, sollicitudin auctor erat rhoncus ac. Quisque lectus neque,
-                            iaculis nec mauris sed, congue rutrum sem. Fusce cursus, tortor ut placerat auctor, risus arcu porttitor
-                            tellus, ac pharetra lacus lectus eu dolor. Sed metus nibh, tincidunt pharetra pulvinar a, venenatis et
-                            eros. Cras et libero mauris. Quisque bibendum odio ut ornare interdum. Nunc eu nulla sollicitudin,
-                            facilisis dolor vel, placerat nibh. Donec eu ex iaculis, tincidunt turpis et, rhoncus neque. Mauris
-                            feugiat urna urna. Donec ac dapibus leo, sit amet porttitor nisi. Mauris felis leo, scelerisque
-                            scelerisque lobortis id, egestas tincidunt dui. Vivamus facilisis felis lectus, id tincidunt nisl
-                            interdum et. Praesent accumsan congue mauris, non pellentesque enim feugiat vel. Praesent in ullamcorper
-                            erat. Etiam mollis sed tellus a mattis. Ut placerat euismod egestas. Mauris blandit nunc eu justo
-                            semper, sit amet interdum eros mollis. Quisque vitae massa purus. Phasellus at orci arcu. Aliquam erat
-                            volutpat. Mauris bibendum orci nec ex semper, ac aliquam sapien placerat. Mauris cursus egestas justo id
-                            elementum. Suspendisse quis cursus massa. Cras fermentum, risus non efficitur condimentum, orci arcu
-                            sollicitudin diam, pharetra malesuada libero odio quis risus. Pellentesque in dui sodales, dapibus risus
-                            ullamcorper, bibendum diam. Praesent sagittis nibh velit, quis tincidunt lorem viverra nec. Phasellus
-                            eget placerat ante. Nulla ac nulla sed erat venenatis commodo. Aliquam id iaculis odio. Maecenas a
-                            maximus orci. In hac habitasse platea dictumst. Quisque quis diam tellus. In ac euismod libero. Aliquam
-                            semper, massa non dictum porttitor, nisi nulla aliquam risus, ornare iaculis tellus ligula sed nulla. Ut
-                            aliquet ligula ac finibus fringilla. Pellentesque pulvinar eros vulputate, bibendum tortor a, imperdiet
-                            metus. Ut rhoncus arcu est, nec elementum neque ultrices sit amet. Pellentesque dignissim ligula felis,
-                            nec scelerisque elit condimentum vitae. In porta magna eget augue egestas pulvinar. Suspendisse
-                            malesuada tellus sed massa pulvinar, sed maximus lorem elementum. Vivamus facilisis libero sit amet
-                            lacinia malesuada. Nam varius tortor quis lacus ultrices fermentum.
-                        </template>
-                    </BasicModal>
+                    <div style="margin-bottom: 10px">
+                        <Button @click="showModal1 = true">Open</Button>
+                        <BasicModal :show.sync="showModal1" align="left" scroll>
+                            <template v-slot:title>
+                                모달 제목
+                            </template>
+                            <template v-slot:content>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent non sollicitudin lacus. Morbi lacinia
+                                tortor id purus varius, sit amet sodales erat consequat. Integer ultrices mauris vehicula eros lacinia,
+                                at vulputate nibh euismod. Fusce at convallis nisl. Curabitur dui quam, rutrum quis semper vitae,
+                                dapibus nec lorem. Sed maximus imperdiet urna. Suspendisse porta commodo nisl, at viverra sapien.
+                                Praesent in felis enim. Sed mollis enim vel velit dapibus, eget consequat dolor convallis. Vivamus sit
+                                amet ornare ex. Morbi porttitor blandit eros sit amet tincidunt. Vivamus imperdiet molestie lectus ac
+                                tristique. Phasellus commodo commodo ligula, sollicitudin auctor erat rhoncus ac. Quisque lectus neque,
+                                iaculis nec mauris sed, congue rutrum sem. Fusce cursus, tortor ut placerat auctor, risus arcu porttitor
+                                tellus, ac pharetra lacus lectus eu dolor. Sed metus nibh, tincidunt pharetra pulvinar a, venenatis et
+                                eros. Cras et libero mauris. Quisque bibendum odio ut ornare interdum. Nunc eu nulla sollicitudin,
+                                facilisis dolor vel, placerat nibh. Donec eu ex iaculis, tincidunt turpis et, rhoncus neque. Mauris
+                                feugiat urna urna. Donec ac dapibus leo, sit amet porttitor nisi. Mauris felis leo, scelerisque
+                                scelerisque lobortis id, egestas tincidunt dui. Vivamus facilisis felis lectus, id tincidunt nisl
+                                interdum et. Praesent accumsan congue mauris, non pellentesque enim feugiat vel. Praesent in ullamcorper
+                                erat. Etiam mollis sed tellus a mattis. Ut placerat euismod egestas. Mauris blandit nunc eu justo
+                                semper, sit amet interdum eros mollis. Quisque vitae massa purus. Phasellus at orci arcu. Aliquam erat
+                                volutpat. Mauris bibendum orci nec ex semper, ac aliquam sapien placerat. Mauris cursus egestas justo id
+                                elementum. Suspendisse quis cursus massa. Cras fermentum, risus non efficitur condimentum, orci arcu
+                                sollicitudin diam, pharetra malesuada libero odio quis risus. Pellentesque in dui sodales, dapibus risus
+                                ullamcorper, bibendum diam. Praesent sagittis nibh velit, quis tincidunt lorem viverra nec. Phasellus
+                                eget placerat ante. Nulla ac nulla sed erat venenatis commodo. Aliquam id iaculis odio. Maecenas a
+                                maximus orci. In hac habitasse platea dictumst. Quisque quis diam tellus. In ac euismod libero. Aliquam
+                                semper, massa non dictum porttitor, nisi nulla aliquam risus, ornare iaculis tellus ligula sed nulla. Ut
+                                aliquet ligula ac finibus fringilla. Pellentesque pulvinar eros vulputate, bibendum tortor a, imperdiet
+                                metus. Ut rhoncus arcu est, nec elementum neque ultrices sit amet. Pellentesque dignissim ligula felis,
+                                nec scelerisque elit condimentum vitae. In porta magna eget augue egestas pulvinar. Suspendisse
+                                malesuada tellus sed massa pulvinar, sed maximus lorem elementum. Vivamus facilisis libero sit amet
+                                lacinia malesuada. Nam varius tortor quis lacus ultrices fermentum.
+                            </template>
+                        </BasicModal>
+                    </div>
+                    <div>
+                        <Button @click="showModal2 = true">Open</Button>
+                        <BasicModal :show.sync="showModal2" align="left" show-action-button scroll :success-callback="closeModal">
+                            <template v-slot:title>
+                                모달 제목
+                            </template>
+                            <template v-slot:content>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent non sollicitudin lacus. Morbi lacinia
+                                tortor id purus varius, sit amet sodales erat consequat. Integer ultrices mauris vehicula eros lacinia,
+                                at vulputate nibh euismod. Fusce at convallis nisl. Curabitur dui quam, rutrum quis semper vitae,
+                                dapibus nec lorem. Sed maximus imperdiet urna. Suspendisse porta commodo nisl, at viverra sapien.
+                                Praesent in felis enim. Sed mollis enim vel velit dapibus, eget consequat dolor convallis. Vivamus sit
+                                amet ornare ex. Morbi porttitor blandit eros sit amet tincidunt. Vivamus imperdiet molestie lectus ac
+                                tristique. Phasellus commodo commodo ligula, sollicitudin auctor erat rhoncus ac. Quisque lectus neque,
+                                iaculis nec mauris sed, congue rutrum sem. Fusce cursus, tortor ut placerat auctor, risus arcu porttitor
+                                tellus, ac pharetra lacus lectus eu dolor. Sed metus nibh, tincidunt pharetra pulvinar a, venenatis et
+                                eros. Cras et libero mauris. Quisque bibendum odio ut ornare interdum. Nunc eu nulla sollicitudin,
+                                facilisis dolor vel, placerat nibh. Donec eu ex iaculis, tincidunt turpis et, rhoncus neque. Mauris
+                                feugiat urna urna. Donec ac dapibus leo, sit amet porttitor nisi. Mauris felis leo, scelerisque
+                                scelerisque lobortis id, egestas tincidunt dui. Vivamus facilisis felis lectus, id tincidunt nisl
+                                interdum et. Praesent accumsan congue mauris, non pellentesque enim feugiat vel. Praesent in ullamcorper
+                                erat. Etiam mollis sed tellus a mattis. Ut placerat euismod egestas. Mauris blandit nunc eu justo
+                                semper, sit amet interdum eros mollis. Quisque vitae massa purus. Phasellus at orci arcu. Aliquam erat
+                                volutpat. Mauris bibendum orci nec ex semper, ac aliquam sapien placerat. Mauris cursus egestas justo id
+                                elementum. Suspendisse quis cursus massa. Cras fermentum, risus non efficitur condimentum, orci arcu
+                                sollicitudin diam, pharetra malesuada libero odio quis risus. Pellentesque in dui sodales, dapibus risus
+                                ullamcorper, bibendum diam. Praesent sagittis nibh velit, quis tincidunt lorem viverra nec. Phasellus
+                                eget placerat ante. Nulla ac nulla sed erat venenatis commodo. Aliquam id iaculis odio. Maecenas a
+                                maximus orci. In hac habitasse platea dictumst. Quisque quis diam tellus. In ac euismod libero. Aliquam
+                                semper, massa non dictum porttitor, nisi nulla aliquam risus, ornare iaculis tellus ligula sed nulla. Ut
+                                aliquet ligula ac finibus fringilla. Pellentesque pulvinar eros vulputate, bibendum tortor a, imperdiet
+                                metus. Ut rhoncus arcu est, nec elementum neque ultrices sit amet. Pellentesque dignissim ligula felis,
+                                nec scelerisque elit condimentum vitae. In porta magna eget augue egestas pulvinar. Suspendisse
+                                malesuada tellus sed massa pulvinar, sed maximus lorem elementum. Vivamus facilisis libero sit amet
+                                lacinia malesuada. Nam varius tortor quis lacus ultrices fermentum.
+                            </template>
+                        </BasicModal>
+                    </div>
                 </div>
             `,
+            methods: {
+                closeModal() {
+                    this.showModal2 = false;
+                }
+            },
             components: { Button, BasicModal }
         }}
     </Story>
