--- a/stories/DataDisplay/Swiper.stories.mdx
+++ b/stories/DataDisplay/Swiper.stories.mdx
@@ -76,7 +76,7 @@ export const Default = (args, { argTypes }) => ({
                 }
             },
             template: `
-                    <Swiper :withControls="true" indicatorColor="white">
+                    <Swiper :withControls="true" indicatorColor="light">
                         <template v-for="(item, index) in itemLength" :slot="'item' + index">
                             <Typography type="display1" color="white">ITEM{{index+1}}</Typography>
                         </template>
@@ -98,12 +98,12 @@ export const Default = (args, { argTypes }) => ({
             },
             template: `
                 <div>
-                    <Swiper indicatorColor="white" style="margin-bottom: 10px;">
+                    <Swiper indicatorColor="light" style="margin-bottom: 10px;">
                         <template v-for="(item, index) in itemLength" :slot="'item' + index">
                             <Typography type="display1" color="white">ITEM{{index+1}}</Typography>
                         </template>
                     </Swiper>
-                   <Swiper indicatorColor="black">
+                   <Swiper indicatorColor="dark">
                         <template v-for="(item, index) in itemLength" :slot="'item' + index">
                             <Typography type="display1" color="white">ITEM{{index+1}}</Typography>
                         </template>
