[add] FullscreenModal mdx에서 content padding 추가

--- a/stories/Message/Modal/FullscreenModal.stories.mdx
+++ b/stories/Message/Modal/FullscreenModal.stories.mdx
@@ -37,7 +37,9 @@ export const Default = (args, { argTypes }) => ({
                 :show-close-button="showCloseButton"
             >
                 <template>
-                    {{ contents }}
+                    <div style="padding: 18px 42px 18px 18px">
+                        {{ contents }}
+                    </div>
                 </template>
             </FullscreenModal>
         </div>`
