--- a/stories/Message/Modal/WithFormModal.stories.mdx
+++ b/stories/Message/Modal/WithFormModal.stories.mdx
@@ -98,6 +98,7 @@ export const Default = (args, { argTypes }) => ({
                 :show-action-button="showActionButton"
                 :max-width="maxWidth"
                 :scroll="scroll"
+                :disabled="disabled"
             >
                 <template v-slot:title>
                     {{ title }}
