--- a/stories/Message/Modal/AlertModal.stories.mdx
+++ b/stories/Message/Modal/AlertModal.stories.mdx
@@ -72,8 +72,7 @@ export const Basic = (args, { argTypes }) => ({
             <AlertModal
                 :show.sync="show"
                 :align="align"
-                :left-button-color="leftButtonColor"
-                :right-button-color="rightButtonColor"
+                :button-color="buttonColor"
                 :persistent="persistent"
                 :success-message="successMessage"
                 :max-width="maxWidth"
